--- a/Resume.html
+++ b/Resume.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/My Logo.jpg" alt="JM Designs Logo" class="profile-image">
+      <img src="images/My_Logo.jpg" alt="JM Designs Logo" class="profile-image">
       <h1 class="tag name">Welcome to "What I've Been Doing With My Life"</h1>
       <p class="tag location">Refrences Upon Request</p>
     </header>
