--- a/Resume.html
+++ b/Resume.html
@@ -25,7 +25,7 @@
     <main class="flex">
       <div class="card">
         <h2>Resume</h2>
-        <p><h4>	Minuteman Press Warminster</h4>
+        <h4>	<p>Minuteman Press Warminster</h4>
         Production/Graphic Designer
         Responsible for consulting with clients to create design solutions for their business, marketing and print needs. Managing daily client orders, determining project requirements, design and proofing artwork to clients.</p>
         <p>Responsible for in-house production and operation of digital equipment, ordering from vendors, to quality check & completion Maintaining client database containing all client files & information.</p>
