Fixed h4 tag issue
removed <p> from inside <h4> and added <h5> for Job title

--- a/Resume.html
+++ b/Resume.html
@@ -25,9 +25,9 @@
     <main class="flex">
       <div class="card">
         <h2>Resume</h2>
-        <h4>	<p>Minuteman Press Warminster</h4>
-        Production/Graphic Designer
-        Responsible for consulting with clients to create design solutions for their business, marketing and print needs. Managing daily client orders, determining project requirements, design and proofing artwork to clients.</p>
+        <h4>	Minuteman Press Warminster</h4> 
+        <h5>Production/Graphic Designer</h5>
+        <p>Responsible for consulting with clients to create design solutions for their business, marketing and print needs. Managing daily client orders, determining project requirements, design and proofing artwork to clients.</p>
         <p>Responsible for in-house production and operation of digital equipment, ordering from vendors, to quality check & completion Maintaining client database containing all client files & information.</p>
         <h4>	ParleeStumpf</h4>
         <p>Production Designer</p>
