--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/My Logo.jpg" alt="JM Designs Logo" class="profile-image">
+      <img src="images/My_Logo.jpg" alt="JM Designs Logo" class="profile-image">
       <h1 class="tag name">Hello, I’m Jose.</h1>
       <p class="tag location">My home is Philadelphia, Pennsylvania.</p>
     </header>
